# Small-Target-Motion-Detectors

./: .editorconfig  .gitignore  Readme.md  Readme.txt  naming_conventions.xlsx  pyproject.toml  requirements.txt  run_python.sh  start_by_matlab.m  start_by_python.py  updata-main.txt  updata.txt  updata_branch_Target-Interception.txt  update-main.md
python/smalltargetmotiondetectors/: pyproject.toml  readme.md  requirements.txt  setup.py
python/smalltargetmotiondetectors/api/: __init__.py  evaluate.py  get_visualize_handle.py  instancing_model.py
python/smalltargetmotiondetectors/core/: apgstmd_core.py  apgstmdv2_core.py  backbonev2_core.py  base_core.py  basecore.py  dstmd_core.py  estmd_backbone.py  estmd_core.py  feedbackstmd_core.py  feedbackstmdv2_core.py  fracstmd_core.py  fstmd_core.py  haarstmd_core.py  math_operator.py  stfeedbackstmd_core.py  stmdnet_core.cp39-win_amd64.pyd  stmdnetf_core.cp39-win_amd64.pyd  stmdplus_core.py  stmdplusv2_core.py  surround_inhibition.py  vstmd_core.cp312-win_amd64.pyd
python/smalltargetmotiondetectors/core/apgstmd_core/: AttentionModule.py  PredictionModule.py
python/smalltargetmotiondetectors/demo/: demo_gui.py  demo_imgstream.py  demo_vidstream.py  evaluate_model.py  inference_gui.py  inference_gui_backup.py  inference_gui_old.py  inference_gui_single_process.py  inference_image_stream.py  inference_video.py
python/smalltargetmotiondetectors/model/: __init.py  __init__.py  backbone.py  facilitated_model.py  feedback_model.py  haarstmd.py  new_model.py  stmdnet.cp39-win_amd64.pyd  version2_model.py  vstmd.cp312-win_amd64.pyd
python/smalltargetmotiondetectors/test/test_model/: test_ApgSTMD.py  test_ApgSTMDv2.py  test_Backbonev2.py  test_DSTMD.py  test_DSTMDBackbone.py  test_ESTMD.py  test_ESTMDBackbone.py  test_FSTMD.py  test_FSTMDv2.py  test_FeedbackSTMD.py  test_FeedbackSTMDv2.py  test_FracSTMD.py  test_HaarSTMD.py  test_STFeedbackSTMD.py  test_STMDNet.py  test_STMDNetF.py  test_STMDPlus.py  test_STMDPlusv2.py  test_vSTMD.py  test_vSTMD_F.py  test_vSTMD_M.py  test_vSTMD_ablation.py
python/smalltargetmotiondetectors/util/: compute_module.py  create_kernel.py  datarecord.py  evaluate_module.py  inputstream.py  iostream.py  matrixnms.py  nms_for_matrix.py  visualization.py
(+481 files in other folders)
