[project]
name = "XTT-MP"
version = "2.2.0"
description = "Extremely Tiny Target - Motion Perception"
readme = "README.md"
authors = [{name = "Shawn MX", email = "mingshuoxu@hotmail.com"}]
dependencies = [
    "matplotlib>=3.10.6",
    "opencv-python>=4.12.0.88",
    "scipy>=1.16.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu126" },
]
torchvision = [
  { index = "pytorch-cu126" },
]


[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true


[dependency-groups]
dev = []

