[project]
name = "XTT-MP"
version = "2.2.0"
description = "Extremely Tiny Target - Motion Perception"
readme = "README.md"
authors = [{name = "Shawn MX", email = "mingshuoxu@hotmail.com"}]
dependencies = [
    "matplotlib",
    "opencv-python",
    "scipy",
    "torch>=2.5.0", 
    "torchvision>=0.20.0"
]



[dependency-groups]
dev = []

