[project]
name = "xttmp"
version = "2.2.0"
description = "eXtremely Tiny Target - Motion Perception"
readme = "README.md"
authors = [{name = "Shawn MX", email = "mingshuoxu@hotmail.com"}]
dependencies = [
    "matplotlib",
    "opencv-python",
    "scipy",
    "torch>=2.5.0", 
    "torchvision>=0.20.0"
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu124" },
]
torchvision = [
  { index = "pytorch-cu124" },
]


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[dependency-groups]
dev = []

